# edx-video-api

./: .gitignore  .travis.yml  MANIFEST.in  README.md  RELEASE.rst  manage.py  pylintrc  pylintrc_tweaks  pytest.ini  run_devstack_integration_tests.sh  settings.py  setup.cfg  setup.py  test_settings.py  tox.ini  wsgi.py
edx_video_api/: __init__.py  apps.py  urls.py
edx_video_api/tests/: __init__.py  settings.py  test_views.py  utils.py
requirements/: base.txt  django.txt  test.in  test.txt
src/edx_video_api/: __init__.py  apps.py  settings.py  views.py
tests/: __init__.py  integration_tests.py  test_views.py
