[metadata]
name = edx_video_api
description = EdX Video API
long_description = file: README.md
license = BSD 3-Clause License
license_files = LICENSE
url = https://github.com/mitodl/edx-video-api
author = MITx
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
